--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm setup
-    - run: npm dev
+    - run: npm i yarn -g
+    - run: yarn
+    - run: yarn setup
+    - run: yarn dev 
